# SerializeMe

./: .gitignore  CMakeLists.txt  README.md  example.cpp  main.cpp
cmake/: SerializeMeConfig.cmake.in
include/DeserializeMe/: deserialize.hpp
include/SerializeMe/: SerializeMe.hpp  deserialize.hpp
